--- a/configs/Replica/room2.yaml
+++ b/configs/Replica/room2.yaml
@@ -3,6 +3,5 @@ mapping:
   bound: [[-3.3,8.5],[-5.7,4.2],[-5.4,3.2]]
   marching_cubes_bound: [[-3.3,8.5],[-5.7,4.2],[-5.4,3.2]]
 data:
-  input_folder: /data0/wjy/ESLAM/Datasets/Replica/room2
+  input_folder: Datasets/Replica/room2
   output: output/Replica/room2
-  trainskip: 1
