--- a/configs/ScanNet/scene0181.yaml
+++ b/configs/ScanNet/scene0181.yaml
@@ -1,11 +1,9 @@
-inherit_from: /data0/wjy/sgl/ESLAM-main-list/configs/ScanNet/scannet.yaml
+inherit_from: configs/ScanNet/scannet.yaml
 mapping:
   bound: [[-1.0,8.9],[-0.9,8.0],[-1.0,3.6]]
   marching_cubes_bound: [[-1.0,8.9],[-0.9,8.0],[-1.0,3.6]]
   max_drift: 4.2 #just for test
-  w_smooth: 0
+  w_smooth: 0.001
 data:
-  input_folder: /data0/wjy/ESLAM/Datasets/scannet/scene0181_00
-  #input_folder: /data0/dataset/ScanNet/scans/scene0181_00
-  #output: output/scannet/scans/scene0181_00_max42_gloc_s0001
-  output: /data0/wjy/Co-SLAM/output/scannet/scene0181_00/demo
+  input_folder: /data0/dataset/ScanNet/scans/scene0181_00
+  output: output/scannet/scans/scene0181_00_max42_gloc_s0001
