--- a/configs/PLGSLAM.yaml
+++ b/configs/PLGSLAM.yaml
@@ -25,7 +25,7 @@ tracking:
   lr_T: 0.001
   lr_R: 0.001
   pixels: 2000
-  iters: 8
+  iters: 8 ###########8
   w_sdf_fs: 10
   w_sdf_center: 200
   w_sdf_tail: 50
@@ -43,17 +43,23 @@ mapping:
   mesh_freq: 4000
   ckpt_freq: 500
   keyframe_every: 4
+  res_keyframe: 50 ###################################################
+  gb_keyframe: 20 ############
+  res_every: 10
+  color_samples: 50
+  depth_samples: 50  ###########################################################3
   mapping_window_size: 20
   keyframe_selection_method: 'overlap'
   lr_first_factor: 5
   lr_factor: 1
   pixels: 4000
   iters_first: 1000
-  iters: 15
+  iters: 15 ###############15
   w_sdf_fs: 5
   w_sdf_center: 200
   w_sdf_tail: 10
   w_depth: 0.1
+  w_smooth: 0
   w_color: 5
   lr:
     decoders_lr: 0.001
@@ -83,3 +89,22 @@ model:
 pos:
   enc: 'OneBlob'
   n_bins: 16
+decoder:
+  geo_feat_dim: 15
+  hidden_dim: 32
+  num_layers: 2
+  num_layers_color: 2
+  hidden_dim_color: 32
+  tcnn_network: False
+data:
+  sc_factor: 1
+  downsample: 1
+  translation: 0
+  num_workers: 4
+training:
+  trunc: 0.06
+  smooth_pts: 32
+  smooth_vox: 0.1
+  smooth_margin: 0.05
+grid:
+  tcnn_encoding: True
