--- a/configs/Replica/room0.yaml
+++ b/configs/Replica/room0.yaml
@@ -2,9 +2,11 @@ inherit_from: configs/Replica/replica.yaml
 mapping:
   bound: [[-1.9,7.9],[-2.2,4.5],[-2.5,2.3]]
   marching_cubes_bound: [[-1.9,7.9],[-2.2,4.5],[-2.5,2.3]]
+#  bound: [[[0.0,7.9],[-2.2,4.5],[-2.5,2.3]],[[-1.9,5],[-2.2,4.5],[-2.5,2.3]]]
+#  bound: [[[-1.9,3.5],[-2.2,4.5],[-2.5,2.3]],[[1.0,7.9],[-2.2,4.5],[-2.5,2.3]],[[-1.9,7.9],[-2.2,4.5],[-2.5,2.3]]]
 
 data:
-  input_folder: /data0/dataset/Replica/room0
-  output: output/Replica/room0/1210_append2
+  input_folder: Datasets/Replica/room0
+  output: output/Replica/room0/1113
   trainskip: 1
 
