--- a/environment.yaml
+++ b/environment.yaml
@@ -151,8 +151,7 @@ dependencies:
     - jupyterlab-pygments==0.1.2
     - jupyterlab-server==2.12.0
     - jupyterlab-widgets==1.1.0
-    - kiwisolver==1.4.4
-    - lietorch==0.2
+    - kiwisolver==1.4.4s
     - locket==0.2.1
     - lpips==0.1.4
     - markupsafe==2.1.1
