--- a/environment.yaml
+++ b/environment.yaml
@@ -1,14 +1,19 @@
 name: plgslam
 channels:
   - pytorch3d
-  - pytorch
-  - conda-forge
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/pro/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/r/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
+  - conda-forge
+  - pytorch
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/r
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/pro
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/msys2
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
@@ -18,18 +23,18 @@ dependencies:
   - brotli-python=1.0.9=py37hd23a5d3_7
   - brotlipy=0.7.0=py37h27cfd23_1003
   - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2023.7.22=hbcca054_0
-  - certifi=2023.7.22=pyhd8ed1ab_0
+  - ca-certificates=2022.10.11=h06a4308_0
+  - certifi=2022.9.24=py37h06a4308_0
   - cffi=1.15.0=py37hd667e15_1
   - charset-normalizer=2.0.12=pyhd8ed1ab_0
   - cryptography=36.0.0=py37h9ce1e76_0
   - cudatoolkit=11.3.1=h2bc3f7f_2
-  - cudatoolkit-dev=11.3.1=py37h5e8e339_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - dataclasses=0.8=pyhc8e2a94_3
   - dbus=1.13.18=hb2f20db_0
   - embree=2.17.7=ha770c72_1
   - expat=2.4.4=h295c915_0
+  - ffmpeg=4.3=hf484d3e_0
   - fontconfig=2.13.1=h6c09931_0
   - freetype=2.10.4=h0708190_1
   - giflib=5.2.1=h7b6447c_0
@@ -73,7 +78,7 @@ dependencies:
   - ninja=1.10.2=h4bd325d_1
   - olefile=0.46=pyh9f0ad1d_1
   - openh264=2.1.1=h780b84a_0
-  - openssl=1.1.1o=h166bdaf_0
+  - openssl=1.1.1s=h7f8727e_0
   - pcre=8.45=h295c915_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pyembree=0.1.6=py37h0da4684_1
@@ -84,7 +89,6 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.7=2_cp37m
   - pytorch-mutex=1.0=cuda
-  - pytorch3d=0.7.1=py37_cu113_pyt1110
   - pyyaml=6.0=py37h540881e_4
   - qt=5.9.7=h5867ecd_1
   - readline=8.1=h46c0cb4_0
@@ -102,9 +106,12 @@ dependencies:
   - zlib=1.2.11=h166bdaf_1014
   - zstd=1.4.9=haebb681_0
   - pip:
+    - --extra-index-url https://download.pytorch.org/whl/cu113
+    - torch==1.10.1+cu113
+    - torchvision==0.11.2+cu113
+    - torchaudio==0.10.1+cu113
     - addict==2.4.0
     - anyio==3.5.0
-    - argcomplete==3.1.2
     - argon2-cffi==21.3.0
     - argon2-cffi-bindings==21.2.0
     - argparse==1.4.0
@@ -121,11 +128,8 @@ dependencies:
     - defusedxml==0.7.1
     - deprecation==2.1.0
     - entrypoints==0.4
-    - evo==1.16.0
-    - ffmpeg==1.4
     - filelock==3.6.0
     - fonttools==4.38.0
-    - freetype-py==2.4.0
     - fsspec==2022.2.0
     - fvcore==0.1.5.post20210915
     - gdown==4.4.0
@@ -151,15 +155,13 @@ dependencies:
     - jupyterlab-pygments==0.1.2
     - jupyterlab-server==2.12.0
     - jupyterlab-widgets==1.1.0
-    - kiwisolver==1.4.4s
+    - kiwisolver==1.4.4
     - locket==0.2.1
-    - lpips==0.1.4
     - markupsafe==2.1.1
     - mathutils==2.81.2
     - matplotlib==3.5.3
     - matplotlib-inline==0.1.3
     - mistune==0.8.4
-    - natsort==8.4.0
     - nbclassic==0.3.7
     - nbclient==0.5.13
     - nbconvert==6.4.5
@@ -169,11 +171,6 @@ dependencies:
     - notebook==6.4.10
     - notebook-shim==0.1.0
     - numpy==1.21.6
-    - numpymarchingcubes==0.0.1
-    - nvidia-cublas-cu11==11.10.3.66
-    - nvidia-cuda-nvrtc-cu11==11.7.99
-    - nvidia-cuda-runtime-cu11==11.7.99
-    - nvidia-cudnn-cu11==8.5.0.96
     - open3d==0.13.0
     - opencv-contrib-python==4.6.0.66
     - opencv-python==4.5.5.64
@@ -194,12 +191,9 @@ dependencies:
     - ptyprocess==0.7.0
     - pyglet==1.5.27
     - pygments==2.11.2
-    - pyopengl==3.1.0
     - pyparsing==3.0.9
-    - pypose==0.3.6
     - pyrender==0.1.45
     - pyrsistent==0.18.1
-    - pytorch-msssim==1.0.0
     - pytz==2022.1
     - pywavelets==1.3.0
     - pyzmq==22.3.0
@@ -217,14 +211,8 @@ dependencies:
     - testpath==0.6.0
     - threadpoolctl==3.1.0
     - tifffile==2021.11.2
-    - tinycudann==1.7
     - tomlkit==0.10.1
     - toolz==0.11.2
-    - torch==1.10.1+cu113
-    - torch-scatter==2.1.1
-    - torchaudio==0.10.1+cu113
-    - torchmetrics==0.11.4
-    - torchvision==0.11.2+cu113
     - tqdm==4.65.0
     - traitlets==5.1.1
     - trimesh==3.21.5
@@ -236,4 +224,3 @@ dependencies:
     - wheel==0.38.4
     - widgetsnbextension==3.6.0
     - zipp==3.7.0
-
